@@ -29,6 +29,7 @@
 - [X] Avoid absolute positionning to be able to use WP admin bar (top:28px;)
 - [X] Find a way to add a AddThis.com div
 **** TODO Wordpress theme development
+     CLOCK: [2012-03-22 jeu. 20:28]--[2012-03-22 jeu. 20:38] =>  0:10
      CLOCK: [2012-03-21 mer. 09:07]--[2012-03-21 mer. 09:45] =>  0:38
      CLOCK: [2012-03-19 lun. 18:58]--[2012-03-19 lun. 19:46] =>  0:48
      CLOCK: [2012-03-13 mar. 18:15]--[2012-03-13 mar. 18:31] =>  0:16
@@ -154,7 +155,7 @@ the patternClearHeaderLeft div.
       - [X] The black menu hover doesn't work in ie6
 - [X] Searchbox is again misplaced (test it when logged in and out)
 - [X] Enable the RSS feed for browser that support it
-- [ ] Use the Universal Edit Button feature (as RSS feed)
+- [X] Use the Universal Edit Button feature (as RSS feed)
 - [ ] Should add the "Bookmark the permalink." in single.php
 - [ ] HTML5 validation
 - [ ] See the checklist at http://codex.wordpress.org/Theme_Development
