@@ -17,9 +17,4 @@ rainbruWebsite - GPLv2 - Create a skin for our Wordpress/Foswiki
    see skin??/INTEGRATION_TESTS
    Please update configure.in for each revision
 
-* v0.0.0-11 (17 feb 2012 - ???) FT ??:??
-- (5) Enable posts and comments RSS feeds
-- (4) Better searchbox placement for wordpress theme
-- (3) Black menu overlapping text fixed in ie6
-- Started to fix the black menu bug in ie6
-- Switch to Wordpress 3.3.1 and theme tested
+* v0.0.0-12 (17 feb 2012 - ???) FT ??:??
